src/main/java/com/example/tareaspring/errors/ValidSigningException.java
package com.example.tareaspring.errors;

public class ValidSigningException extends RuntimeException {

    public ValidSigningException(String message) {
        super(message);
    }
}
